Re-format with Sonar Changes