@@ -13,53 +13,58 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
-public class PaymentOutboxRepositoryImpl implements PaymentOutboxRepository {
+public class PaymentOutboxRepositoryImpl implements PaymentOutboxRepository
+{
     private final PaymentOutboxJpaRepository paymentOutboxJpaRepository;
     private final PaymentOutboxDataAccessMapper paymentOutboxDataAccessMapper;
 
     public PaymentOutboxRepositoryImpl(PaymentOutboxJpaRepository paymentOutboxJpaRepository,
-                                       PaymentOutboxDataAccessMapper paymentOutboxDataAccessMapper) {
+                                       PaymentOutboxDataAccessMapper paymentOutboxDataAccessMapper)
+    {
         this.paymentOutboxJpaRepository = paymentOutboxJpaRepository;
         this.paymentOutboxDataAccessMapper = paymentOutboxDataAccessMapper;
     }
 
     @Override
-    public OrderPaymentOutboxMessage save(OrderPaymentOutboxMessage orderPaymentOutboxMessage) {
+    public OrderPaymentOutboxMessage save(OrderPaymentOutboxMessage orderPaymentOutboxMessage)
+    {
         return paymentOutboxDataAccessMapper.paymentOutboxEntityToOrderPaymentOutboxMessage(paymentOutboxJpaRepository.save(paymentOutboxDataAccessMapper.orderPaymentOutboxMessageToOutboxEntity(orderPaymentOutboxMessage)));
     }
 
     @Override
     public Optional<List<OrderPaymentOutboxMessage>> findByTypeAndOutboxStatusAndSagaStatus(String sagaType,
                                                                                             OutboxStatus outboxStatus,
-                                                                                            SagaStatus... sagaStatus) {
+                                                                                            SagaStatus... sagaStatus)
+    {
         return Optional.of(paymentOutboxJpaRepository.findByTypeAndOutboxStatusAndSagaStatusIn(sagaType,
-                        outboxStatus,
-                        Arrays.asList(sagaStatus))
-                .orElseThrow(() -> new PaymentOutboxNotFoundException("Payment outbox object " + "could not be found for saga type " + sagaType))
-                .stream()
-                .map(paymentOutboxDataAccessMapper::paymentOutboxEntityToOrderPaymentOutboxMessage)
-                .collect(Collectors.toList()));
+                                                                                               outboxStatus,
+                                                                                               Arrays.asList(sagaStatus))
+                                                     .orElseThrow(() -> new PaymentOutboxNotFoundException("Payment outbox object " + "could not be found for saga type " + sagaType))
+                                                     .stream()
+                                                     .map(paymentOutboxDataAccessMapper::paymentOutboxEntityToOrderPaymentOutboxMessage)
+                                                     .toList());
     }
 
     @Override
     public Optional<OrderPaymentOutboxMessage> findByTypeAndSagaIdAndSagaStatus(String type,
                                                                                 UUID sagaId,
-                                                                                SagaStatus... sagaStatus) {
+                                                                                SagaStatus... sagaStatus)
+    {
         return paymentOutboxJpaRepository.findByTypeAndSagaIdAndSagaStatusIn(type,
-                        sagaId,
-                        Arrays.asList(sagaStatus))
-                .map(paymentOutboxDataAccessMapper::paymentOutboxEntityToOrderPaymentOutboxMessage);
+                                                                             sagaId,
+                                                                             Arrays.asList(sagaStatus))
+                                         .map(paymentOutboxDataAccessMapper::paymentOutboxEntityToOrderPaymentOutboxMessage);
     }
 
     @Override
     public void deleteByTypeAndOutboxStatusAndSagaStatus(String type,
                                                          OutboxStatus outboxStatus,
-                                                         SagaStatus... sagaStatus) {
+                                                         SagaStatus... sagaStatus)
+    {
         paymentOutboxJpaRepository.deleteByTypeAndOutboxStatusAndSagaStatusIn(type,
-                outboxStatus,
-                Arrays.asList(sagaStatus));
+                                                                              outboxStatus,
+                                                                              Arrays.asList(sagaStatus));
     }
 }
