@@ -11,33 +11,35 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
-public class RestaurantDataAccessMapper {
-    public List<UUID> restaurantToRestaurantProducts(Restaurant restaurant) {
+public class RestaurantDataAccessMapper
+{
+    public List<UUID> restaurantToRestaurantProducts(Restaurant restaurant)
+    {
         return restaurant.getProducts()
-                .stream()
-                .map(product -> product.getId()
-                        .getValue())
-                .collect(Collectors.toList());
+                         .stream()
+                         .map(product -> product.getId()
+                                                .getValue())
+                         .toList();
     }
 
-    public Restaurant restaurantEntityToRestaurant(List<RestaurantEntity> restaurantEntities) {
+    public Restaurant restaurantEntityToRestaurant(List<RestaurantEntity> restaurantEntities)
+    {
         RestaurantEntity restaurantEntity = restaurantEntities.stream()
-                .findFirst()
-                .orElseThrow(() -> new RestaurantDataAccessException("Restaurant could not be found!"));
+                                                              .findFirst()
+                                                              .orElseThrow(() -> new RestaurantDataAccessException("Restaurant could not be found!"));
 
         List<Product> restaurantProducts = restaurantEntities.stream()
-                .map(entity -> new Product(new ProductId(entity.getProductId()),
-                        entity.getProductName(),
-                        new Money(entity.getProductPrice())))
-                .toList();
+                                                             .map(entity -> new Product(new ProductId(entity.getProductId()),
+                                                                                        entity.getProductName(),
+                                                                                        new Money(entity.getProductPrice())))
+                                                             .toList();
 
         return Restaurant.builder()
-                .restaurantId(new RestaurantId(restaurantEntity.getRestaurantId()))
-                .products(restaurantProducts)
-                .active(restaurantEntity.getRestaurantActive())
-                .build();
+                         .restaurantId(new RestaurantId(restaurantEntity.getRestaurantId()))
+                         .products(restaurantProducts)
+                         .active(restaurantEntity.getRestaurantActive())
+                         .build();
     }
 }
