@@ -12,51 +12,56 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
-public class OrderOutboxRepositoryImpl implements OrderOutboxRepository {
+public class OrderOutboxRepositoryImpl implements OrderOutboxRepository
+{
     private final OrderOutboxJpaRepository orderOutboxJpaRepository;
     private final OrderOutboxDataAccessMapper orderOutboxDataAccessMapper;
 
     public OrderOutboxRepositoryImpl(OrderOutboxJpaRepository orderOutboxJpaRepository,
-                                     OrderOutboxDataAccessMapper orderOutboxDataAccessMapper) {
+                                     OrderOutboxDataAccessMapper orderOutboxDataAccessMapper)
+    {
         this.orderOutboxJpaRepository = orderOutboxJpaRepository;
         this.orderOutboxDataAccessMapper = orderOutboxDataAccessMapper;
     }
 
     @Override
-    public OrderOutboxMessage save(OrderOutboxMessage orderPaymentOutboxMessage) {
+    public OrderOutboxMessage save(OrderOutboxMessage orderPaymentOutboxMessage)
+    {
         return orderOutboxDataAccessMapper.orderOutboxEntityToOrderOutboxMessage(orderOutboxJpaRepository.save(orderOutboxDataAccessMapper.orderOutboxMessageToOutboxEntity(orderPaymentOutboxMessage)));
     }
 
     @Override
     public Optional<List<OrderOutboxMessage>> findByTypeAndOutboxStatus(String sagaType,
-                                                                        OutboxStatus outboxStatus) {
+                                                                        OutboxStatus outboxStatus)
+    {
         return Optional.of(orderOutboxJpaRepository.findByTypeAndOutboxStatus(sagaType,
-                        outboxStatus)
-                .orElseThrow(() -> new OrderOutboxNotFoundException("Approval outbox object " + "cannot be found for saga type " + sagaType))
-                .stream()
-                .map(orderOutboxDataAccessMapper::orderOutboxEntityToOrderOutboxMessage)
-                .collect(Collectors.toList()));
+                                                                              outboxStatus)
+                                                   .orElseThrow(() -> new OrderOutboxNotFoundException("Approval outbox object " + "cannot be found for saga type " + sagaType))
+                                                   .stream()
+                                                   .map(orderOutboxDataAccessMapper::orderOutboxEntityToOrderOutboxMessage)
+                                                   .toList());
     }
 
     @Override
     public Optional<OrderOutboxMessage> findByTypeAndSagaIdAndPaymentStatusAndOutboxStatus(String sagaType,
                                                                                            UUID sagaId,
                                                                                            PaymentStatus paymentStatus,
-                                                                                           OutboxStatus outboxStatus) {
+                                                                                           OutboxStatus outboxStatus)
+    {
         return orderOutboxJpaRepository.findByTypeAndSagaIdAndPaymentStatusAndOutboxStatus(sagaType,
-                        sagaId,
-                        paymentStatus,
-                        outboxStatus)
-                .map(orderOutboxDataAccessMapper::orderOutboxEntityToOrderOutboxMessage);
+                                                                                           sagaId,
+                                                                                           paymentStatus,
+                                                                                           outboxStatus)
+                                       .map(orderOutboxDataAccessMapper::orderOutboxEntityToOrderOutboxMessage);
     }
 
     @Override
     public void deleteByTypeAndOutboxStatus(String sagaType,
-                                            OutboxStatus outboxStatus) {
+                                            OutboxStatus outboxStatus)
+    {
         orderOutboxJpaRepository.deleteByTypeAndOutboxStatus(sagaType,
-                outboxStatus);
+                                                             outboxStatus);
     }
 }
